Removed headless mode for playwright